# schemashift

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  whitelist_vulture.py
.claude/skills/gitnexus/gitnexus-cli/: SKILL.md
.claude/skills/gitnexus/gitnexus-debugging/: SKILL.md
.claude/skills/gitnexus/gitnexus-guide/: SKILL.md
.github/workflows/: ci.yml  docs.yml  llm-integration.yml
docs/: conf.py  getting-started.md  index.md  research-dataframely-integration.md
docs/_static/: custom.css
docs/api/: core.md  dsl.md  exceptions.md  index.md  models.md  registry.md
docs/superpowers/specs/: 2026-04-11-dataframely-integration-design.md
docs/user-guide/: cli.md  config-format.md  dsl.md  llm-generation.md
examples/configs/: camstar_lot_movement.json  fabx_lot_movement.json
src/schemashift/: __init__.py  cli.py  detection.py  dtypes.py  errors.py  llm.py  models.py  orchestration.py  readers.py  registry.py  result.py  target_schema.py  transform.py  validation.py
src/schemashift/dsl/: __init__.py  _lookups.py  analysis.py  ast_nodes.py  compiler.py  grammar.lark  parser.py
src/schemashift/dsl/tables/: country_to_iso2.json  country_to_iso3.json  iso2_to_country.json  iso3_to_country.json
src/schemashift/schema/: __init__.py  format_config.json
tests/: conftest.py  test_cli.py  test_dataframely_integration.py  test_detection.py  test_dsl_compiler.py  test_dsl_fuzz.py  test_dsl_parser.py  test_dsl_security.py  test_errors.py  test_examples.py  test_excel_edge_cases.py  test_llm.py  test_llm_integration.py  test_models.py  test_property.py  test_readers.py  test_registry.py  test_schema.py  test_smart_transform.py  test_streaming.py  test_target_schema.py  test_transform.py  test_validation.py
tests/fixtures/: test_schema.yaml
tests/fixtures/configs/: inventory.json  lot_movement_schema.yaml  sales.json  sample_schema.yaml
tests/fixtures/csv/: camstar_sample.csv  nullable.csv  numbers.csv  sample.csv
tests/fixtures/json/: sample.json
tests/fixtures/semicon/: generate.py
tests/fixtures/semicon/configs/: amhs_carrier.yaml  camstar_mes.yaml  fabx_tsv.yaml  factorytalk.yaml  infinityqs_spc.yaml  operator_log.yaml  partner_fab_jp.yaml  promis_legacy.yaml  sap_erp.yaml  yield_pilot.yaml
tests/fixtures/semicon/sources/: amhs_carrier.csv  broken_exporter.csv  camstar_mes.csv  fabx.tsv  factorytalk.json  infinityqs_spc.xlsx  operator_log.xlsx  partner_fab_jp.tsv  promis_legacy.csv  sap_erp.csv  yield_pilot.parquet
tests/fixtures/tsv/: fabx_sample.tsv  sample.tsv
