[project]
name = "schemashift"
version = "0.1.0"
description = "Declarative file format transformer — config-driven column mappings with a safe expression DSL"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Ruaridh", email = "ruaridh@example.com" }]
keywords = ["etl", "transform", "polars", "csv", "schema"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "polars>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "fastexcel>=0.12",
]

[project.optional-dependencies]
llm = [
    "langchain-core>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "pre-commit>=3.0",
    "ruff>=0.8",
    "black>=24.0",
    "isort>=5.0",
]

[project.scripts]
schemashift = "schemashift.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schemashift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=schemashift --cov-report=term-missing"

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["schemashift"]

[tool.coverage.run]
source = ["schemashift"]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
]
