[project]
name = "schemashift"
version = "0.1.0"
description = "Declarative file format transformer — config-driven column mappings with a safe expression DSL"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Ruaridh Williamson", email = "ruaridh.williamson@gmail.com" }]
keywords = ["etl", "transform", "polars", "csv", "schema"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "polars>=1.0,<2",
    "pydantic>=2.12,<3",
    "pyyaml>=6.0,<7",
    "click>=8.3,<9",
    "fastexcel>=0.19,<1",
]

[project.optional-dependencies]
docs = [
    "sphinx>=9.1",
    "furo>=2025.12.19",
    "myst-parser>=5.0",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.7",
    "sphinx-autodoc-typehints>=3.9",
]
llm = [
    "langchain-core>=1.2,<2",
    "langchain-anthropic>=1.4,<2",
    "python-dotenv>=1.2,<2",
    "langchain>=1.2.14",
]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.1",
    "hypothesis>=6.151",
    "pre-commit>=4.5",
    "ruff>=0.15",
    "black>=26.3",
    "vulture>=2.16",
    "typos>=1.45,<2",
    "ty>=0.0.28",
]

[project.scripts]
schemashift = "schemashift.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/schemashift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=schemashift --cov-report=term-missing -m 'not llm'"
markers = [
    "llm: tests that call a real LLM API (require ANTHROPIC_API_KEY)",
]

[tool.ruff]
src = ["src"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S", "W", "C4", "C90", "PT"]
per-file-ignores = { "tests/**" = ["S101"], "tests/fixtures/**" = ["E501", "UP017", "SIM108"], "whitelist_vulture.py" = ["F821", "B018"], "src/schemashift/dsl/parser.py" = ["C901"] }

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.coverage.run]
source = ["schemashift"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.vulture]
ignore_decorators = [
    "@field_validator",
    "@model_validator",
    "@*.command",
    "@*.group",
]
ignore_names = [
    "model_config",
    "cls",
    "schema_version",
]
exclude = [".venv/"]
min_confidence = 60
paths = ["src/", "whitelist_vulture.py"]

[tool.typos.files]
extend-exclude = ["src/schemashift/dsl/tables/"]

[tool.typos.default]
locale = "en-gb"
extend-ignore-re = ["(?Rm)^.*#\\s*ignore:typo$"]

[tool.typos.default.extend-words]
promis = "promis"

[dependency-groups]
dev = [
    "openpyxl>=3.1",
]
